	  channel windows forgets their window number upon reconnect.
	+ Add experimental support for DNSSEC DANE validation of certificates.
	+ Strip the argument for boolean options (see bug #769).
	+ Freenode have been readded to the list of networks in the default
	  configuration file.
	+ Disabled support for the insecure SSLv2 protocol.
	+ Various documentation enhancements.
	- Fix crashing bug that can happen if the terminal height decreases before
	  the first window is created.
	- Fixed minor compiler warnings.
	- Fixed possible crashing bug when processing an octal escape sequence.
	- Fixed the /ignore -network option (see bug #748).
	- Fixed signal handling for /exec'd commands. Irssi now sends the signal to
	  the process group id instead of the process id.
	- Fixed segfault generated by SSL disconnections (see bug #752).
	- Fix compilation when built with -Werror=format-security. Patch by
	  Jaroslav Skarvada.

v0.8.15 2010-04-03  The Irssi team <staff@irssi.org>
	+ Add active_window_ignore_refnum option
	  With active_window_ignore_refnum ON, the current behavior for the
	  active_window key (meta-a by default) is preserved: it switches to the
	  window with the highest activity level that was last activated.
	  With active_window_ignore_refnum OFF, the old behavior is used:
	  it switches to the window with the highest activity level with the
	  lowest refnum. (by Matt Sparks, bug #667)
	+ Show new Charybdis +q list in channel windows (numerics 728 and 729).
	+ Allow servers to belong to multiple networks.
	+ Improve paste detection. Irssi now detects a paste if it reads at
	  least three bytes in a single read; subsequent reads are associated to
	  the same paste if they happen before 'paste_detect_time' time since
	  the last read. If no read occurs after 'paste_detect_time' time the
	  paste buffer is flushed; if there is at least one complete line its
	  content is sent as a paste, otherwise it is processed normally.