@@ -10,6 +10,7 @@ char *password;
 
 char *ssl_cert;
 char *ssl_pkey;
+char *ssl_pass;
 char *ssl_cafile;
 char *ssl_capath;
 
