@@ -13,6 +13,7 @@ v0.8.16-rc1 2013-06-26  The Irssi team <staff@irssi.org>
 	  configuration file.
 	+ Disabled support for the insecure SSLv2 protocol.
 	+ Various documentation enhancements.
+	+ Add -ssl_pass to /connect and /server (see bug #305).
 	- Fix crashing bug that can happen if the terminal height decreases before
 	  the first window is created.
 	- Fixed minor compiler warnings.
@@ -21,7 +22,7 @@ v0.8.16-rc1 2013-06-26  The Irssi team <staff@irssi.org>
 	- Fixed signal handling for /exec'd commands. Irssi now sends the signal to
 	  the process group id instead of the process id.
 	- Fixed segfault generated by SSL disconnections (see bug #752).
-	- Fix compilation when built with -Werror=format-security. Patch by
+	- Fix compilation when build with -Werror=format-security. Patch by
 	  Jaroslav Skarvada.
 
 v0.8.15 2010-04-03  The Irssi team <staff@irssi.org>
